[package]
name = "qs_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "qs_native_rust"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
cxx-qt-build = "0.8.0"

[dependencies]
alpm = "5.0.0"
chrono = { version = "0.4.43", default-features = false, features = ["clock", "serde", "std"] }
chrono-tz = "0.10.4"
cxx = "1.0.194"
cxx-qt = "0.8.0"
cxx-qt-lib = { version = "0.8.0", features = ["qt_qml", "qt_gui"] }
dotenvy = "0.15.7"
ical = "0.11.0"
libc = "0.2.180"
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "json", "rustls", "rustls-native-certs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
