[package]
name = "todoist-api"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
