[package]
name = "qsnative_rust"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
name = "qsnative_rust"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "qs-secrets"
path = "src/bin/qs-secrets.rs"

[[bin]]
name = "qs-google-auth"
path = "src/bin/qs-google-auth.rs"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
blight = { version = "0.8.0", default-features = false }
cxx = "1.0.194"
cxx-qt = "0.8.1"
cxx-qt-lib = "0.8.1"
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
futures-util = "0.3.31"
google-calendar3 = "7.0.0"
google-gmail1 = "7.0.0"
libc = "0.2.186"
mime_guess = "2.0.5"
notify = "8.2.0"
procfs = { version = "0.18.0", default-features = false }
rusqlite = { version = "0.37.0", features = ["bundled"] }
secret-service = { version = "5.1.0", default-features = false, features = ["rt-tokio-crypto-rust"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
time = { version = "0.3.49", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
toml = "0.9.8"
tempfile = "3.23.0"
ureq = { version = "3.3.0", features = ["json"] }
uuid = { version = "1.23.3", features = ["v4"] }
zbus = { version = "5.16.0", default-features = false, features = ["tokio"] }
rig-core = { version = "0.38.2", default-features = false, features = ["rmcp", "reqwest", "rustls", "derive"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }

[build-dependencies]
cxx-qt-build = "0.8.1"
