[package]
name = "qsmath_stream"
version = "0.1.0"
edition = "2021"

[lib]
name = "qsmath_stream"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "qsmath-render-svg"
path = "src/main.rs"

[dependencies]
cxx = "1.0.194"
cxx-qt = "0.9.0"
cxx-qt-lib = "0.9.0"
mdstream = "0.2.0"
ratex-layout = "=0.1.11"
ratex-parser = "=0.1.11"
ratex-svg = { version = "=0.1.11", features = ["standalone", "embed-fonts"] }
ratex-types = "=0.1.11"

[build-dependencies]
cxx-qt-build = "0.9.0"
